refactor : 배열 객체 생성방식 변경